wrap attribute keys into single quote for preserving formatting